--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 install:
   - pip install -q pipenv
   - pipenv sync --dev
-  - pipenv install codecov
+  - cp contrib/env-sample .env
 
 script:
   - pipenv run flake8
