--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: python
 python:
   - 3.7
 
+services:
+  postgresql
+addons:
+    postgresql: '9.5'
+
 env:
   global:
     - PIPENV_VENV_IN_PROJECT=1
@@ -12,6 +17,9 @@ install:
   - pip install -q pipenv
   - pipenv sync --dev
   - cp contrib/env-sample .env
+
+before_script:
+  - psql -c "CREATE DATABASE testdb;" -U postgres
 
 script:
   - pipenv run flake8
